k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wackops-coach
  labels:
    name: wackops-coach
    istio-injection: enabled
