k8s/prod/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wackops-coach-worker
  namespace: wackops-coach
  labels:
    app: wackops-coach-worker
    environment: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wackops-coach-worker
  template:
    metadata:
      labels:
        app: wackops-coach-worker
        environment: production
    spec:
      containers:
        - name: wackops-coach-worker
          image: prodacrva1ng1.azurecr.io/wackops-coach:latest
          imagePullPolicy: Always
          command:
            - celery
            - -A
            - devopscoach.app.celery_app
            - worker
            - -c
            - "2"
            - -l
            - info
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
